@@ -17,6 +17,7 @@ Changelog for 1.3.25
 * Fixed taxform "default reportable" checkbox not persisted (Chris T, 3581310)
 * Fixed labelling of vendor column on taxform reports (Chris T, 3581317)
 * Fixed terms of sales/purchase order not respected (Chris T, 3581337)
+* Added Perl equivalent to prepare-company-database.sh (Chris T, 3551127)
 
 Chris T is Chris Travers
 Kevin B is Kevin Bailey
